GNOME Bugzilla – Bug 675645
Automatically chosen profiles cause unexpected color shifts
Last modified: 2013-07-16 16:16:36 UTC
EOG version displays the blue color almost as violet. See attached a comparation between same image displayed with EOG and Shotwell.
Attachment is missing. Do you use any color calibration under "System Settings > Hardware > Color"?
No, it is with the default monitor settings.
Please check with xprop -root | grep _ICC Just to be sure. If you don't have a profile set, it would be nice if you could attach your comparision and (if possible) the original image so we can try ourselves.
Please also post the output if you run with the following env vars set: EOG_DEBUG_IMAGE_DATA=1 EOG_DEBUG_LCMS=1
Created attachment 213833 [details] profile grep
Created attachment 213835 [details] compare the EOG vs Shotwell
Created attachment 213836 [details] original image
No difference in output if variables are set.
(In reply to comment #8) > No difference in output if variables are set. Whoops, I was actually interested in the console output that eog makes in that case. ;) But that's no problem, because... (In reply to comment #5) > Created an attachment (id=213833) [details] > profile grep ... you do have a profile set. If you had no profile set, the grep wouldn't show an _ICC_PROFILE entry.
There seems to be some problems with some autogenerated ICC profiles. Reassigning to gnome-settings-daemon to check if there might be a problem with profile generation in the color management plugin. There are at least three other bug reporting unexpected colors with the autogenerated(?) profiles, where dropping the profiles restored the output: #681460, #670836, #681460. This seems to have hit several people using Ubuntu: https://bugs.launchpad.net/ubuntu/+source/eog/+bug/938751
Felix, see http://blog.pcode.nl/2013/04/14/display-profiles-generated-from-edid/ -- can you follow those instructions (and ask anyone affected to do the same please) so we can do something smarter for GNOME 3.10. Thanks in advance.
*** Bug 699041 has been marked as a duplicate of this bug. ***
We now ignore invalid EDID blobs.